parslers-benchmark/src/tests/invalid/syntaxErr/sequence/endSeq.wacc
# extra sequential composition 

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skip end;
